--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,13 @@
-.container {
+.container-fluid {
 	width: 100%;
 	height: auto;
+}
+
+.container{
+	width:100%;
+	height: auto;
+	max-width: 1200px;
+	margin: 0px auto;
 }
 
 .name {
