--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,8 @@
 .container-fluid {
 	width: 100%;
 	height: auto;
+	border-bottom: 1.1px solid;
+	border-color: #cccccc;
 }
 
 .container{
@@ -8,18 +10,45 @@
 	height: auto;
 	max-width: 1200px;
 	margin: 0px auto;
+
 }
 
 .navbar {
 	width: 100%;
-	background-color: #bbb;
-	height: 60px;
-	margin-top: -6px;
+	background-color: #ffffff;
+	height: 80px;
+}
+
+.name {
+	background-color:#4aaaa5;
+	padding: 28px;
+	color: white;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 150%;	
+	font-weight:bold;
 }
 
 .navbar-right {
 	float:right;
 	display:inline;
+	vertical-align: middle;
+	line-height:80px;
+	padding:0px;
+	margin-right: 20px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	color: #a7b0af;
+	font-size: 115	%;
+}
+
+.navbar-right a {
+	text-decoration: none;
+	color:inherit;
+}
+
+a:hover{
+	color:#4aaaa5;
+	text-decoration: none;
+	cursor:pointer;
 }
 
 .navbar-left {
@@ -34,9 +63,66 @@
 .aboutme{
 	float:left;
 	width:60%;
+	border: solid;
+	margin-top: 60px;
+	padding:15px;
+}
+
+.aboutme h1 {
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	padding: 15px;
+	color: #4aaaa5;
+	font-size: 150%;
+	font-weight:bold;
+
 }
 
 .connect{
 	float:right;
-	width: 40%
+	width: 30%;
+	border:solid;
+	margin-top: 60px;
+	text-align:center;
+	padding:15px;
+}
+
+.connect h2 {
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	padding: 15px;
+	color: #4aaaa5;
+	font-size: 150%;
+	font-weight:bold;
+
+}
+
+.connect img {
+	width:20%;
+	height:20%;	
+}
+
+.footer{
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:90px; 
+   background:#666666;
+   border-top: 6px solid;
+   border-color: #4aaaa5;
+   color: #a7b0af;
+}
+
+.copyright{
+	text-align:center;
+	vertical-align: middle;
+	line-height: 90px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 75%;
+}
+
+
+.img-resize{
+	width: 25%;
+	height: 25%;
+	float:left;
+	padding: 10px;
 }
