--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,9 +7,10 @@ body {
 .container-fluid {
 	width: 100%;
 	height: auto;
-	border-bottom: 1.1px solid;
+	border-bottom: 1.2px solid;
 	border-color: #cccccc;
 	background-color: #ffffff;
+	border-style: solid;
 }
 
 .container{
@@ -19,7 +20,7 @@ body {
 	margin: 0px auto;
 
 }
-
+	
 .navbar {
 	width: 100%;
 	background-color: #ffffff;
@@ -88,6 +89,8 @@ a:hover{
 
 .aboutme p {
 	padding:10px;
+	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color:#777777;
 }
 
 .connect {
