--- a/assets/styles.css
+++ b/assets/styles.css
@@ -88,9 +88,13 @@ a:hover{
 }
 
 .aboutme p {
-	padding:10px;
+	margin-top:30px;
 	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color:#777777;
+}
+
+.aboutme p.clear {
+	clear:both;
 }
 
 .connect {
@@ -119,6 +123,11 @@ a:hover{
 	width:20%;
 	height:20%;	
 	padding:10px;
+	border: 0;
+}
+
+.connect a {
+	text-decoration: none;
 }
 
 hr{
