--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,6 +11,7 @@ body {
 	border-color: #cccccc;
 	background-color: #ffffff;
 	border-style: solid;
+
 }
 
 .container{
@@ -64,11 +65,7 @@ a:hover{
 	display:inline;
 }
 
-.ul-width{
-	width: 100%;
-}
-
-.aboutme{
+.aboutme {
 	float:left;
 	width:60%;
 	border: solid;
@@ -136,9 +133,33 @@ hr{
 	border-color: #cccccc
 }
 
-.footer{
+.footer {
    position:absolute;
-   bottom:0;
+   bottom: 0px;
+   width:100%;
+   height:90px; 
+   background:#666666;
+   border-top: 6px solid;
+   border-color: #4aaaa5;
+   color: #a7b0af;
+}
+
+
+.footer2 {
+   position:absolute;
+   bottom: -400px;
+   width:100%;
+   height:90px; 
+   background:#666666;
+   border-top: 6px solid;
+   border-color: #4aaaa5;
+   color: #a7b0af;
+}
+
+
+.footer3 {
+   position:absolute;
+   bottom: -200px;
    width:100%;
    height:90px; 
    background:#666666;
@@ -161,4 +182,42 @@ hr{
 	height: 25%;
 	float:left;
 	padding: 10px;
+}
+
+.aboutme form {
+	margin-top: 20px;
+}
+
+
+input[type=text], textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.fText {
+	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color:#777777;
+}
+
+#images .block {
+	display: inline-block;
 }
